--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Blog Title"
-author: "Blog Author"
+title: "cma3il finds"
+author: "cma3il"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b> by <b><a href=\"https://github.com/niklasbuschmann\">@niklasbuschmann</a></b>"
 permalink: /:title/
 lang: "en"
@@ -26,8 +26,8 @@ navigation:
   - {file: "README.md", icon: address-card}
 
 external:                    # see http://fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
+  - {title: Mail, icon: envelope, url: "mailto:hadraoui98@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/cma3il"}
   - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
